accounts/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: accounts-deployment
 namespace: staging
 labels:
   app: accounts-deploy
spec:
  replicas: 1
  template:
    metadata:
      name: accounts-pod-template
      labels:
        app: accounts
    spec:
      containers:
        - name: accounts
          image: 986381756175.dkr.ecr.us-east-1.amazonaws.com/labsoft-2018/accounts:latest
          imagePullPolicy: Always
