accounts/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: accounts
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/ssl-services: "auth"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - "accounts.staging.api.labsoft.host"
      secretName: accounts-certificate
  rules:
  - host: "accounts.staging.api.labsoft.host"
    http:
      paths:
      - path: /
        backend:
          serviceName: auth
          servicePort: http
